Updated PaneBase footer z-index. Fixing FilterOpSwitch being above.

--- a/src/components/panes/PaneBase.scss
+++ b/src/components/panes/PaneBase.scss
@@ -93,6 +93,7 @@
             padding: 20px;
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
             text-align: center;
+            z-index: 3;
             button { // TODO: Need to add classes to btns to set colors etc
                 @include button;
                 @include button-color($c-brand-confirm);
